# Master_Thesis

./: .gitmodules  Decompression of residuals by subtraction.ipynb  Volume_splitting.ipynb  decrypting_images.py
python/: EED_3D_inpainting.py  EED_inpainting.py  c_inpainting.pyx  inpainting.pxd  linear_homogeneous_inpainting.py  main.py  pixel_locations  setup.py
python/imgCodecs/: .xdp_imgCodecs.pro.IJKFH1  CMakeLists.txt  chain_coding.cpp  chain_coding.h  chain_coding.ui  derivatives.cpp  derivatives.h  diffresdialog.cpp  diffresdialog.h  diffresdialog.ui  directneighbordilationdialog.cpp  directneighbordilationdialog.h  directneighbordilationdialog.ui  eed_4_4d_dialog.cpp  eed_4_4d_dialog.cpp.ywKUrS  eed_4_4d_dialog.h  eed_4_4d_dialog.ui  eedinpaintingdialog.cpp  eedinpaintingdialog.h  eedinpaintingdialog.ui  eedsmoothingdialog.cpp  eedsmoothingdialog.h  eedsmoothingdialog.ui  fed.h  foeedinpaintingdialog.cpp  foeedinpaintingdialog.h  foeedinpaintingdialog.ui  imgCodecs.pro  imgCodecs.pro.user.02fd51c.4.8-pre1  imgCodecs.pro.user.Xy3535  imgcodecs.cpp  imgcodecs.h  imgcodecs.ui  inpainting.cpp  inpainting.h  main.cpp  masks.cpp  masks.h  opencv.pri  primizedialog.cpp  (+24 more)
python/imgCodecs/cannylib/: CannyEdgeDetector.pri
python/imgCodecs/niftilib/: ctpl_stl.pri  nifti1.pri  nifti1_io.pri  znzlib.pri
rice/: rice.pyx
